--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ version: 2
 runtime: python
 api_version: 1
 
-default_expiration: '3650d'
+#default_expiration: '3650d'
 
 handlers:
 - url: /remote_api
@@ -14,6 +14,10 @@ handlers:
 - url: /media
   static_dir: media
   secure: optional
+
+- url: /tweets/send/
+  script: common/appenginepatch/main.py
+  login: admin
 
 - url: /.*
   script: common/appenginepatch/main.py
