--- a/index.yaml
+++ b/index.yaml
@@ -21,3 +21,10 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+# Used 5 times in query history.
+- kind: twitinerary_scheduledtweet
+  properties:
+  - name: username
+  - name: datetime
+    direction: desc
