--- a/index.yaml
+++ b/index.yaml
@@ -22,6 +22,12 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+# Used 5 times in query history.
+- kind: twitinerary_scheduledtweet
+  properties:
+  - name: tweeted
+  - name: post_at
+
 # Unused in query history -- copied from input.
 - kind: twitinerary_scheduledtweet
   properties:
