Improved comment accuracy. Note that all Tweets >= 1 day old that have also been sent will be batch_deleted.

--- a/index.yaml
+++ b/index.yaml
@@ -22,7 +22,13 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 10 times in query history.
+# Used 9 times in query history.
+- kind: twitinerary_scheduledtweet
+  properties:
+  - name: tweeted
+  - name: created_at
+
+# Used 12 times in query history.
 - kind: twitinerary_scheduledtweet
   properties:
   - name: tweeted
