--- a/index.yaml
+++ b/index.yaml
@@ -28,13 +28,21 @@ indexes:
   - name: tweeted
   - name: created_at
 
-# Unused in query history -- copied from input.
+# Used 4 times in query history.
 - kind: twitinerary_scheduledtweet
   properties:
   - name: tweeted
   - name: post_at
 
-# Unused in query history -- copied from input.
+# Used 3 times in query history.
+- kind: twitinerary_scheduledtweet
+  properties:
+  - name: tweeted
+  - name: user
+  - name: post_at
+    direction: desc
+
+# Used once in query history.
 - kind: twitinerary_scheduledtweet
   properties:
   - name: tweeted
