--- a/cron.yaml
+++ b/cron.yaml
@@ -1,8 +1,8 @@
 cron:
 - description: Send scheduled Tweets.
-  url: /tweets/batch_send/
+  url: /cron/batch_send/
   schedule: every 1 minutes
 
 - description: Delete sent Tweets.
-  url: /tweets/batch_delete/
+  url: /cron/batch_delete/
   schedule: every 1 hours
