Enabled remote_api.

--- a/app.yaml
+++ b/app.yaml
@@ -21,6 +21,10 @@ handlers:
   secure: optional
   login: admin
 
+- url: /remote_api
+  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  login: admin
+
 - url: /.*
   script: common/appenginepatch/main.py
   secure: optional
